--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^7.13.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "dayjs": "^1.11.12",
     "axios": "^1.7.4",
+    "dayjs": "^1.11.12",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,4 +38,3 @@
     "vite": "^5.4.0"
   }
 }
-
